--- a/editor/folderinfo/folderinfo_projectile_all.json
+++ b/editor/folderinfo/folderinfo_projectile_all.json
@@ -10,5 +10,55 @@
    ]
   }
  ], 
- "d": {}
+ "d": {
+  "134241978": {
+   "__tuple__": true, 
+   "items": [
+    2147483647, 
+    0
+   ]
+  }, 
+  "134248694": {
+   "__tuple__": true, 
+   "items": [
+    2147483647, 
+    1
+   ]
+  }, 
+  "134276490": {
+   "__tuple__": true, 
+   "items": [
+    2147483647, 
+    2
+   ]
+  }, 
+  "134272726": {
+   "__tuple__": true, 
+   "items": [
+    2147483647, 
+    3
+   ]
+  }, 
+  "134279046": {
+   "__tuple__": true, 
+   "items": [
+    2147483647, 
+    4
+   ]
+  }, 
+  "134252740": {
+   "__tuple__": true, 
+   "items": [
+    2147483647, 
+    5
+   ]
+  }, 
+  "134221291": {
+   "__tuple__": true, 
+   "items": [
+    2147483647, 
+    6
+   ]
+  }
+ }
 }
